# boralago

./: CMakeLists.txt  README.md
proto/: circuit.proto  geometry.proto  inflator_rules.proto
src/: abstract_shape.h  bundle.cc  bundle.h  c_make_header.h.in  cell.cc  cell.h  circuit.cc  circuit.h  circuit_element.cc  circuit_element.h  geometry_adapter.cc  geometry_adapter.h  geometry_writer.cc  geometry_writer.h  instance.cc  instance.h  layer.h  line.cc  line.h  line_segment.h  main.cc  node.cc  node.h  path.h  physical_properties_database.cc  physical_properties_database.h  point.cc  point.h  poly_line.cc  poly_line.h  poly_line_cell.cc  poly_line_cell.h  poly_line_inflator.cc  poly_line_inflator.h  polygon.cc  polygon.h  port.h  rectangle.cc  rectangle.h  renderer.cc  (+10 more)
